# osdf

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  serve-verifier.bat
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  nightly.yml  release.yml
crates/osdf-cli/: Cargo.toml  build.rs
crates/osdf-cli/src/: demo.rs  main.rs
crates/osdf-core/: Cargo.toml
crates/osdf-core/benches/: verify_throughput.rs
crates/osdf-core/examples/: scale_bench.rs
crates/osdf-core/src/: build.rs  canonical.rs  constants.rs  container.rs  crypto.rs  error.rs  identity.rs  ledger.rs  lib.rs  manifest.rs  merkle.rs  report.rs  revision.rs  signature.rs  types.rs  verify.rs  verify_audit.rs  verify_fast.rs  verify_profile.rs  verify_schedule.rs
crates/osdf-core/tests/: generate_fixtures.rs  phase_a.rs
crates/osdf-wasm/: Cargo.toml  README.md  build.rs
crates/osdf-wasm/src/: lib.rs
crates/osdf-wasm/tests/: parity.rs  parity_native.rs
docs/: README.md  architecture.md  benchmarks.md  getting-started.md  github-setup.md  interoperability.md  licensing.md  roadmap.md  web-verifier.md
docs/assets/benchmarks/: hyperfine-summary.md
fixtures/: README.md
fixtures/benchmarks/opentdf/: README.md  spec-nosign.ntdf
fixtures/content/: taxes-filled.json  taxes-template.json
fixtures/invalid/: deleted-parent-revision.osdf  duplicate-path.osdf  fake-parent-commitment.osdf  ledger-bad-inclusion.osdf  ledger-leaf-mismatch.osdf  missing-declared-object.osdf  missing-magic.osdf  missing-signature.osdf  path-traversal.osdf  tampered-content-hash.osdf  tampered-signature.osdf  trailing-bytes.osdf  undeclared-object.osdf
fixtures/valid/: Taxes.osdf  identity-trust.json  ledger-trust.json  taxes-template.osdf  valid-committed.osdf  valid-draft.osdf  valid-rev2-with-ledger-proof.osdf  valid-with-identity.osdf  valid-with-ledger-proof.osdf
gateway/: gateway.css  gateway.js  index.html
licenses/future/: LICENSE-APACHE  LICENSE-MIT  README.md
scripts/: README.md  build-wasm.ps1  build-wasm.sh  fetch-opentdf-fixtures.ps1  fetch-opentdf-fixtures.sh  install-cli.ps1  install-cli.sh  run-benchmarks.ps1  run-benchmarks.sh  run-demo-package.ps1  run-demo-package.sh  serve-demo.ps1  serve-demo.sh  serve-web.ps1  serve-web.sh
specs/: demo-package.md  offline-verification-bundle.md  phase-a.md  phase-b.md  phase-b3.md  phase-c-gateway.md  phase-d-m2-hosted.md  phase-d.md  transformation-receipt.md
specs/schemas/: offline-verification-bundle.example.json  offline-verification-bundle.schema.json  transformation-receipt.example.json  transformation-receipt.schema.json
test-vectors/: README.md
web/: README.md  app.js  index.html  styles.css
