[package]
name = "osdf-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for browser-based OSDF verification"
license.workspace = true
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
osdf-core = { path = "../osdf-core", default-features = false, features = ["verify-only"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[dev-dependencies]
osdf-core = { path = "../osdf-core", default-features = false, features = ["verify-only"] }
serde_json = "1.0"
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
